5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1800_2566.log
== TEST (2019-06-06 11:38:15) 
-- CODE:
from numpy import*
x=zeros(7,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==1):
		x[1]
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:38:24) 
-- CODE:
from numpy import*
x=zeros(7,dtype=int)
#f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==1):
		x[1]
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:38:35) 
-- CODE:
from numpy import*
x=zeros(7,dtype=int)
#f = array(eval(input("vetor de faltas: ")))
#for i in range(size(f)):
	#if(f[i]==1):
		#x[1]
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:44:43) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==1):
		x[0]=x[0]+1
	elif(f[i]==2):
		x[1]=x[1]+1
	elif(f[i]==3):
		x[2]=x[2]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
		
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 11:46:31) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==1):
		x[0]=x[0]+1
	elif(f[i]==2):
		x[1]=x[1]+1
	elif(f[i]==3):
		x[2]=x[2]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
		
print(x)		
		
-- EXECUTION TIME:
0.976439
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[0 3 0 0 3 4]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[0 1 2 4 5 5]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[0 2 1 3 1 2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:34:07) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==1):
		x[0]=x[0]+1
	elif(f[i]==2):
		x[1]=x[1]+1
	elif(f[i]==3):
		x[2]=x[2]+1
	elif(f[i]==4):
		x[3]=x[3]+1
	elif(f[i]==5):
		x[4]=x[4]+1
	elif(f[i]==6):
		x[5]=x[5]+1
		
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:35:43) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:45:19) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
for k in x
	x[k]=
print(x)		
		
-- ERROR:
File "XXXX", line 17
    for k in x
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:45:37) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
#for k in x
	#x[k]=
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 16:47:46) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
for k in x
	x[k]=((x[k]/size(f))*100)
print(round(x,1))		
		
-- EXECUTION TIME:
0.908126
-- ERROR:
  File "/home/codebench/codes/1800/2566/main.py", line 17
    for k in x
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:47:47) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
for k in x
	x[k]=((x[k]/size(f))*100)
print(round(x,1))		
		
-- ERROR:
File "XXXX", line 17
    for k in x
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:47:57) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
for k in x:
	x[k]=((x[k]/size(f))*100)
print(round(x,1))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:49:00) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
for k in x:
	x[k]=round(((x[k]/size(f))*100),1)
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:49:52) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
for k in x:
	x[k]=round(((x[k]/size(f))*100),1)
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:51:18) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
for k in x:
	x[k]=round(((x[k]/size(f))*100),1)

print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:51:37) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
for k in x:
	x[k]=round(((x[k]/size(f))*100),1)

print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:04:56) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
#for k in x:
#	x[k]=round(((x[k]/size(f))*100),1)
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:06:16) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
for k in x:
	x[k]=(x[k]/size(f))*100
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:07:16) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
for k in x:
	x[k]=x[k]/size(f)
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:08:58) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
for k in range(size(x)):
	x[k]=x[k]/size(f)
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:09:12) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
for k in range(size(x)):
	x[k]=x[k]/size(f)*100
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:09:55) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
for k in range(size(x)):
	x[k]=x[k]/size(f)*100
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 19:10:12) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
for k in range(size(x)):
	x[k]=x[k]/size(f)*100
print(x)		
		
-- EXECUTION TIME:
0.995031
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:10:23) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
for k in range(size(x)):
	x[k]=x[k]/size(f)*100
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:15:17) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
for k in range(size(x)):
	x[k]=x[k]/size(f)*100

print(x.split('.'))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 19:15:50) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
for k in range(size(x)):
	x[k]=x[k]/size(f)*100
x=x.split('.')
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:06:46) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
for k in range(size(x)):
	x[k]=x[k]/size(f)*100
x=x.split('.')
print(round(x,1))		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:07:28) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
for k in range(size(x)):
	x[k]=round(x[k]/size(f)*100,1)
x=x.split('.')
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:07:40) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
for k in range(size(x)):
	x[k]=round(x[k]/size(f)*100,1)
#x=x.split('.')
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:07:49) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
for k in range(size(x)):
	x[k]=round(x[k]/size(f)*100,1)
#x=x.split('.')
print(x)		
		
-- EXECUTION TIME:
1.16158
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:08:22) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1
		
for k in range(size(x)):
	x[k]=round(x[k]/size(f)*100,1)
#x=x.split('.')
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:11:39) 
-- CODE:
from numpy import*
x=zeros(6,dtype=int)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1

for k in range(size(x)):
	x[k]=round(x[k]/size(f)*100,1)
#x=x.split('.')
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:12:01) 
-- CODE:
from numpy import*
x=zeros(6,dtype=float)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1

for k in range(size(x)):
	x[k]=round(x[k]/size(f)*100,1)
#x=x.split('.')
print(x)		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:12:22) 
-- CODE:
from numpy import*
x=zeros(6,dtype=float)
f = array(eval(input("vetor de faltas: ")))
for i in range(size(f)):
	if(f[i]==2):
		x[0]=x[0]+1
	elif(f[i]==3):
		x[1]=x[1]+1
	elif(f[i]==4):
		x[2]=x[2]+1
	elif(f[i]==5):
		x[3]=x[3]+1
	elif(f[i]==6):
		x[4]=x[4]+1
	elif(f[i]==7):
		x[5]=x[5]+1

for k in range(size(x)):
	x[k]=round(x[k]/size(f)*100,1)
#x=x.split('.')
print(x)		
		
-- EXECUTION TIME:
1.08619
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
